[tool.poetry]
name = "careers-website"
version = "0.1.0"
description = ""
authors = ["AnushaPanuganti <107758299+AnushaPanuganti@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "careers_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
